--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </li>
     </ol>
     <hr size="3" noshade>
-    <h3><a href="Contact.html">My contact details</a></h3>
+    <h3><a href="contact.html">My contact details</a></h3>
     <hr size="3" noshade>
     <h3>My Educational career</h3>
     <table cellspacing="5" border="1"><!--but drawing this border around the table made it ugly. So better not to use the deprecated attributes of html.those are used at the times where there is no css.its outdated now.-->
